cmake_minimum_required(VERSION 3.28.3)
project(a4_5)

set(CMAKE_CXX_STANDARD 20)

add_executable(a4_5

        main.cpp
        Controller.cpp
        Controller.h
        Dog.cpp
        Dog.h
        AdminRepository.cpp
        AdminRepository.h
        UserRepository.cpp
        UserRepository.h
        UI.cpp
        UI.h
        AdminRepository.cpp
        Tests_coverage.cpp
        Tests_coverage.h
        main.cpp
)
