cmake_minimum_required(VERSION 3.28)
project(t1_luizamocan_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(t1_luizamocan_1
        main.cpp
        DynamicArray.h
        Repo.cpp
        Repo.h
        Controller.cpp
        Controller.h
        UI.cpp
        UI.h
        Weather.cpp
        Weather.h
        Tests.cpp)
